# Object-Oriented-Programming-OOP

./: README.md
Proiect Cheltuieli Familie/: CMakeLists.txt  Cheltuieli.cpp  Cheltuieli.h  RepoCheltuiala.cpp  RepoCheltuiala.h  Service.cpp  Service.h  Teste.cpp  Teste.h  UI.cpp  UI.h  main.cpp
Proiect Tonomat/: CMakeLists.txt  CodException.h  CodValidator.cpp  CodValidator.h  Entitate.cpp  Entitate.h  NumeException.h  NumeValidator.cpp  NumeValidator.h  PretException.h  PretValidator.cpp  PretValidator.h  RepoEntitate.cpp  RepoEntitate.h  RepoFile.cpp  RepoFile.h  Service.cpp  Service.h  Teste.cpp  Teste.h  UI.cpp  UI.h  main.cpp
