cmake_minimum_required(VERSION 3.25)
project(LAB_11_12)

set(CMAKE_CXX_STANDARD 17)

add_executable(LAB_11_12 main.cpp RepoEntitate.cpp Entitate.cpp RepoFile.cpp Service.cpp Teste.cpp UI.cpp CodException.h NumeException.h PretException.h CodValidator.cpp CodValidator.h NumeValidator.cpp NumeValidator.h PretValidator.cpp PretValidator.h)
